--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -3,14 +3,20 @@
   "version": "99.0.0",
   "description": "",
   "ascMain": "assembly/index.ts",
-  "main": "assembly/index.ts",
+  "main": "index.js",
+	"type": "module",
   "types": "assembly/index.ts",
   "scripts": {
-    "test": "node tests"
+    "test": "node tests",
+		"build": "tsc"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "assemblyscript": "^0.22.0"
+    "assemblyscript": "^0.25.0",
+    "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "visitor-as": "^0.11.4"
   }
 }
