--- a/packages/hello/package.json
+++ b/packages/hello/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "node tests",
-    "asbuild:debug": "asc assembly/index.ts --target debug --transform lisk-sdk/dist/transform",
+    "asbuild:debug": "asc assembly/index.ts --target debug --transform lisk-sdk",
     "asbuild:release": "asc assembly/index.ts --target release",
     "asbuild": "npm run asbuild:debug && npm run asbuild:release",
     "start": "npx serve ."
