--- a/packages/hello/package.json
+++ b/packages/hello/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "node tests",
-    "asbuild:debug": "asc assembly/index.ts --target debug --transform lisk-sdk/transform",
-    "asbuild:release": "asc assembly/index.ts --target release --transform lisk-sdk/transform",
+    "asbuild:debug": "asc assembly/index.ts --target debug --transform lisk-sdk/transform --transform lisk-sdk/export",
+    "asbuild:release": "asc assembly/index.ts --target release --transform lisk-sdk/transform --transform lisk-sdk/export",
     "asbuild": "npm run asbuild:debug && npm run asbuild:release",
     "start": "npx serve ."
   },
